# tutoria-ia-2.0

aula 4 - Rag Server/agent/src/ai/: prompt.py
aula 6 - Projeto Agente/: projeto.excalidraw
aula 7 - Plan and Execute/: ideia.excalidraw
aula 7 - Plan and Execute/agent_core/: README.md  pyproject.toml
aula 7 - Plan and Execute/agent_core/src/core/: base.py  graph.py  prompts.py
aula 7 - Plan and Execute/agent_core/src/core/tools/: fs.py
aula 7 - Plan and Execute/agent_core/src/ui/: tui.py
aula 7 - Plan and Execute/agent_core/src/utils/: formatters.py  loggers.py  mappers.py  renders.py
aula 7 - Plan and Execute/agent_live/: pyproject.toml
aula 7 - Plan and Execute/agent_live/src/core/: graph.py
aula 7 - Plan and Execute/agent_live/src/core/models/: outputs.py
aula 7 - Plan and Execute/agent_live/src/core/tools/: fs.py
aula 7 - Plan and Execute/agent_live/src/ui/: tui.py
aula 7 - Plan and Execute/agent_live/src/utils/: formatters.py  loggers.py  renders.py
