[project]
name = "agent-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Vieira Salgado",email = "vieira4ev@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langgraph (>=1.1.10,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "rich (>=15.0.0,<16.0.0)",
    "windows-curses (>=2.4.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
